--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,9 @@ website:
     right:
       - blog.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/kpjohnson
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/kristinpjohnson
 format:
   html:
     theme: sandstone
