--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   navbar:
     right:
       - blog.qmd
+      - notebook.qmd
       - icon: github
         href: https://github.com/kpjohnson
       - icon: twitter
